# hass-livebox-component

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  info.md  pyproject.toml  pytest.ini  requirements-dev.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Issue_Report.md
.github/workflows/: auto-approve.yml  check-lint.yml  dependbot-auto-approve.yml  hacs.yml  hassfest.yaml  main.yml  pytest.yml  pythonpackage.yml  release.yml  stale.yaml
custom_components/livebox/: __init__.py  binary_sensor.py  bridge.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  coordinator.py_origin  device_tracker-1.py  device_tracker.py  diagnostics.py  entity.py  fakedevices.py  helpers.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
tests/: __init__.py  conftest.py  const.py  test_binary_sensor.py  test_button.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_coordinator_unit.py  test_device_tracker.py  test_device_tracker_unit.py  test_sensor.py  test_setup.py  test_switch.py
tests/fixtures/: LB_4_deviceinfo.json  LB_7_deviceinfo.json  LB_W7_deviceinfo.json  Livebox 3.json  Livebox 7.json  Livebox Fibre.json  Livebox Nautilus.json  Livebox W7.json  MIBS_data.json  MIBS_lan.json  MIBS_veip0.json  calllist.json  dev_stats_veip0.json  devices.json  devices_all.json  dhcp_pool.json  groups.json  guest_wifi.json  iot_status.json  issue_191_repeater_topology_sanitized.json  issue_233_livebox_6_diagnostics_sanitized.json  issue_258_livebox_nautilus_diagnostics_sanitized.json  lan_ip.json  language.json  localtime_zone.json  nmc_autodetect.json  (+19 more)
(+4 files in other folders)
